# Video-Steg

./: CMakeLists.txt  README.md
cmake/: FindFFMPEG.cmake
include/: dwt.hpp  ecc.hpp  steg.hpp
src/: cmp.py  dwt.cpp  ecc.cpp  image.cpp  steg.cpp  video.cpp
